Fix ferox plugin and testssl plugin mass insert
